--- a/comics.html
+++ b/comics.html
@@ -16,6 +16,7 @@
             <li><a href="#">Contact</a></li>
     	</ul>
     </div>
+    //test comment for git 
     
     <div id="templatemo_header">
     	<div id="templatemo_special_offers">
